# chesscoach

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  run.bat
data_pgn/: partie1.pgn  partie2.pgn
src/chesscoach/: analysis.py  config.py  detectors.py  engine.py  eval_signals.py  parse_pgn.py  stats.py
src/chesscoach/viz/: render.py
ui/: streamlit_app.py
